feat: SVG icon support via jsvg, fpng-java encoding, 96px cap
- loadImage() renders .svg files using jsvg (path outlines, no font deps)
- getPngImage() replaced ImageIO with SIMD-accelerated fpng-java (AVX2/SSE)
- scaleToFit() caps both SVG and PNG icons at 96×96, preserving aspect ratio
- renderSvg() passes target FloatSize for proper viewBox scaling

Signed-off-by: manticore-projects <andreas@manticore-projects.com>